Fix safe-area issues (#2910)
This fixes safe-area issues all over the UI:

- Issues where the safe area was applied to elements where it should
not, e.g. the settings menus' entries.
- Issues where the safe area was missing, e.g. model cards, which were
hidden under the notch.

Due to webpack's CssMinimizerPlugin minimizing `0px` to `0` when
overriding the Framework7 safe area CSS vars, which then broke the
calculation, a new .css file has been introduced.

---------

--- a/bundles/org.openhab.ui/web/src/css/app.styl
+++ b/bundles/org.openhab.ui/web/src/css/app.styl
@@ -211,8 +211,9 @@ html
 
 @media (max-width 1023px)
   .block-narrow
-    padding-left var(--f7-safe-area-left)
-    padding-right var(--f7-safe-area-right)
+    // use insets from env because f7-safe-area CSS vars are not available due the fix in nomini.css
+    padding-left env(safe-area-inset-left)
+    padding-right env(safe-area-inset-right)
 
 .md .panel-in-breakpoint
   box-shadow 0 1px 10px 0 rgba(0, 0, 0, 0.3)
@@ -327,3 +328,7 @@ html
   margin-bottom var(--f7-card-expandable-margin-vertical)
   margin-left var(--f7-card-expandable-margin-horizontal)
   margin-right var(--f7-card-expandable-margin-horizontal)
+
+// Fix safe area issues inside block-narrow, where safe areas are already respected by the wrapping block-narrow
+// Fix is in nomini.css due to CssMinimizerPlugin minimizing app.styl and removing the unit px from 0px,
+// which breaks calculcations using the overwritten CSS variables.
